# dnssd

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  compile_commands.json
cmake/: FindAvahi.cmake  FindBonjourSDK.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  dnssd-advertiser  dnssd-browser
docs/: avahi-implementation-plan.md
examples/: dnssd-browser.cpp
include/dnssd/: Advertiser.h  Browser.h
include/dnssd/avahi/: Avahi.h  AvahiAdvertiser.h  AvahiBrowser.h
include/dnssd/bonjour/: BonjourBrowser.h
include/dnssd/common/: AdvertiserBase.h  BrowserBase.h  Result.h
include/dnssd/windns/: Windns.h  WindnsAdvertiser.h  WindnsBrowser.h  WindnsDiscoveredService.h  WindnsUtil.h
include/windns/: WindnsAdvertiser.h  WindnsBrowser.h
src/avahi/: AvahiAdvertiser.cpp  AvahiBrowser.cpp
src/bonjour/: SharedConnection.cpp
src/common/: Log.cpp  Result.cpp
src/windns/: WindnsAdvertiser.cpp  WindnsBrowser.cpp  WindnsUtil.cpp
